<resources>
    <string name="app_name">PM1Ejercicio#1</string>
    <string name="nombres">Ingrese su Nombre</string>
    <string name="apellidos">Ingrese su apellido</string>
    <string name="Telefono">Ingrese su Telefono</string>
    <string name="Btn_procesar">Procesar</string>
    <string name="Btn_regresar">regresar</string>
    <string name="Btn_atras">atras</string>
    <string name="edad">Ingrese Edad</string>
    <string name="correo">Ingrese el correo</string>
    <string name="PantallaIngreso">Agregar pantalla</string>
    <string name="ListaPersona">Listar persona</string>
    <string name="Direccion">Ingrese La Direccion</string>
    <string name="Eliminar">Desea Eliminar</string>
    <string name="TomarFoto">capturar imagen</string>
    <string name="TomarVideo">Tomar video</string>
    <string name="Video" />
    <string name="Grabar">Tomar el  video</string>
    <string name="Ver">ver video</string>
    <string name="video">video</string>

</resources>